# GemtextToHtmlSiteConverter

./: .gitignore  CMakeLists.txt
.github/workflows/: CI.yml
GemtextToHtmlSiteConverter/: CMakeLists.txt  GemtextToHtmlSiteConverter.cpp  GemtextToHtmlSiteConverter.hpp
GemtextToHtmlTranslator/: CMakeLists.txt
GemtextToHtmlTranslator/Composers/HtmlComposer/: HtmlComposer.cpp  HtmlComposer.hpp
GemtextToHtmlTranslator/DocumentReaders/: IDocumentReader.hpp
GemtextToHtmlTranslator/DocumentReaders/GemtextDocumentReader/: GemtextDocumentReader.cpp  GemtextDocumentReader.hpp
GemtextToHtmlTranslator/DocumentWriters/: IDocumentWriter.hpp
GemtextToHtmlTranslator/DocumentWriters/HtmlDocumentWriter/: HtmlDocumentWriter.cpp  HtmlDocumentWriter.hpp
GemtextToHtmlTranslator/Documents/: Document.cpp  Document.hpp  DocumentEntry.cpp  DocumentEntry.hpp
GemtextToHtmlTranslator/Parsers/GemtextParser/: GemtextParser.cpp  GemtextParser.hpp
GemtextToHtmlTranslator/utils/: string_utils.cpp  string_utils.hpp
exe/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main_tests.cpp
tests/GemtextToHtmlSiteConverterTests/: CMakeLists.txt  GemtextToHtmlSiteConverterTests.cpp
tests/GemtextToHtmlSiteConverterTests/misc/InputDirectory/: another.gmi  test.file
tests/GemtextToHtmlSiteConverterTests/misc/InputDirectory/test subdir/: test.gmi
tests/GemtextToHtmlTranslatorTests/: CMakeLists.txt  GemtextDocumentReader_tests.cpp  GemtextParser_tests.cpp  HtmlComposer_tests.cpp  HtmlDocumentWriter_tests.cpp  string_utils_tests.cpp
tests/GemtextToHtmlTranslatorTests/misc/: gemtext_etalon.gmi  html_etalon.html
